<resources>
    <string name="app_name">Virta Apps</string>
    <string name="hello">Hello !!</string>
    <string name="subtitle"><b><u>Selamat Datang di Virtual Taylor</u></b></string>
    <string name="isi">Virtual Tailor adalah sebuah \aplikasi Untuk Pengukuran baju secara Online</string>
    <string name="btn_ukur">Ukur Sekarang</string>
    <string name="btn_cara">Cara Penggunaan</string>
    <string name="btn_back">Button</string>
    <string name="logo">logo</string>
    <string name="nomor">1</string>
    <string name="info">ini adalah info penggunaan dari virtual tailor tapi masih belum ada isinya</string>
    <string name="jdlinfo"><b>Gimana Caranya ?</b></string>
    <string name="userukur"><b>Isi Data pengukuran dulu</b></string>
    <string name="nama">Nama</string>
    <string name="dewasa">Dewasa</string>
    <string name="anak">Anak- Anak</string>
    <string name="alamat">Alamat</string>
    <string name="ukur">Ukur</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login"><b><u>Login</u></b></string>
    <string name="user">user</string>
    <string name="daftar">Belum punya akun ? daftar</string>
    <string name="proses">proses</string>
    <string name="image">Image</string>
    <string name="button">Button</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="ambil_gambar">AMBIL GAMBAR</string>
    <string name="panjang_tangan">Panjang Tangan</string>
    <string name="lebar_bahu">Lebar Bahu</string>
    <string name="textview">TextView</string>
    <string name="tingi_badan">Tingi Badan</string>
    <string name="standart_ukuran">Standart Ukuran</string>
    <string name="hsl"><b>Hasil Pengukuran</b></string>
    <string name="id_code">ID Code</string>
    <string name="id">Silahkan melanjutkan Pemesanan di Website VirTa Menggunakan code diatas untuk validasi ukuran</string>
</resources>