<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/back"
        style="@style/circle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_back"
        android:minHeight="48dp"
        android:src="@drawable/back"
        tools:ignore="RedundantDescriptionCheck,RedundantDescriptionCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:layout_marginTop="10dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/subtitle"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/regular"
        android:text="@string/isi"
        android:textColor="#D3777575"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="269dp"
        android:layout_height="125dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/subtitle"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/button"
        style="@style/btn_ukur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/medium"
        android:text="@string/btn_ukur"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/btn_cara"
        style="@style/bg_black"
        android:textColor="@color/white"/>

</LinearLayout>