<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageProcessing"
    android:padding="40dp"
    android:orientation="vertical">
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/hsl"
      android:textSize="18sp"
      android:textColor="@color/purple_700"
      android:layout_marginBottom="20dp">
  </TextView>

  <LinearLayout
      android:layout_width="314dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/data"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="100dp"
          android:text="Nama :"
          android:textColor="@color/black" />


    </LinearLayout>
  </LinearLayout>



  <TextView
      android:id="@+id/textView3"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:padding="10dp"
      android:text="@string/panjang_tangan"
      style="@style/btn_ukur"
      android:layout_marginBottom="10dp"/>

  <TextView
      android:id="@+id/textView4"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:padding="10dp"
      android:text="@string/lebar_bahu"
      style="@style/btn_ukur"
      android:layout_marginBottom="10dp"/>

  <TextView
      android:id="@+id/textView5"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:padding="10dp"
      android:text="Lingkar Dada"
      style="@style/btn_ukur"
      android:layout_marginBottom="10dp"/>

  <TextView
      android:id="@+id/textView6"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:padding="10dp"
      android:text="@string/tingi_badan"
      style="@style/btn_ukur"
      android:layout_marginBottom="10dp"/>

  <TextView
      android:id="@+id/textView7"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:padding="10dp"
      android:text="@string/standart_ukuran"
      style="@style/btn_ukur"
      android:layout_marginBottom="20dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center">

    <Button
        android:id="@+id/kembali"
        style="@style/bg_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kembali"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/simpan"
        style="@style/bg_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simpan"
        android:textColor="@color/white" />
  </LinearLayout>


</LinearLayout>